--- a/index.html
+++ b/index.html
@@ -7,24 +7,15 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    <a href="Services.txt" class="service-tag glow">Services</a>
     <div class="container">
-        <div class="profile">
-            <img src="https://images-ext-1.discordapp.net/external/nYF5NJeOUK0oXujvuBjy0_bt0ZJHR7jmEw3CU2OM8Ps/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/496801115904540674/e497f1827071615f4b7cf50546aa488f.png?format=webp&quality=lossless" alt="Profile 1" class="profile-icon">
-            <p>KL</p>
+        <div class="icon">
+            <img src="https://images-ext-1.discordapp.net/external/nYF5NJeOUK0oXujvuBjy0_bt0ZJHR7jmEw3CU2OM8Ps/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/496801115904540674/e497f1827071615f4b7cf50546aa488f.png?format=webp&quality=lossless" alt="User Icon">
+            <h1 class="glow">kl</h1>
         </div>
-        <div class="profile">
-            <img src="https://media.discordapp.net/attachments/1251468862550052946/1252308192306925609/IMG_5844.jpg?ex=6671be63&is=66706ce3&hm=1712a75815e95346b949046cc73a03f4a4a5179c2bec2f5b51edd91aa993e4d3&=&format=webp&width=391&height=487" alt="Profile 2" class="profile-icon">
-            <p>Trip</p>
-        </div>
+        <audio src="previer.mp3" autoplay loop></audio>
     </div>
- 
-    <audio autoplay loop hidden>
-        <source src="priver.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
-
-    <div id="snowflakes-container"></div>
-    <script src="scripts.js"></script>
+    <script>
+        
 </body>
 </html>
