--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>priver.info</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="https://images-ext-1.discordapp.net/external/nYF5NJeOUK0oXujvuBjy0_bt0ZJHR7jmEw3CU2OM8Ps/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/496801115904540674/e497f1827071615f4b7cf50546aa488f.png?format=webp&quality=lossless" type="image/png" />
 </head>
 <body>
     <a href="Services.txt" class="service-tag glow">Services</a>
