--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
             <img src="https://images-ext-1.discordapp.net/external/nYF5NJeOUK0oXujvuBjy0_bt0ZJHR7jmEw3CU2OM8Ps/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/496801115904540674/e497f1827071615f4b7cf50546aa488f.png?format=webp&quality=lossless" alt="User Icon">
             <h1 class="glow">kl</h1>
         </div>
-        <audio src="previer.mp3" autoplay loop></audio>
+        <audio id="audio" loop="">
+          <source src="previer.mp3" type="audio/mpeg" />
+          Your browser does not support the <code>audio</code> element.
+        </audio>
     </div>
     <script>
         
