--- a/index.html
+++ b/index.html
@@ -5,21 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>priver.info</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="https://images-ext-1.discordapp.net/external/nYF5NJeOUK0oXujvuBjy0_bt0ZJHR7jmEw3CU2OM8Ps/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/496801115904540674/e497f1827071615f4b7cf50546aa488f.png?format=webp&quality=lossless" type="image/png" />
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <a href="Services.txt" class="service-tag glow">Services</a>
     <div class="container">
-        <div class="icon">
-            <img src="https://images-ext-1.discordapp.net/external/nYF5NJeOUK0oXujvuBjy0_bt0ZJHR7jmEw3CU2OM8Ps/%3Fsize%3D1024/https/cdn.discordapp.com/avatars/496801115904540674/e497f1827071615f4b7cf50546aa488f.png?format=webp&quality=lossless" alt="User Icon">
-            <h1 class="glow">kl</h1>
-        </div>
-        <audio id="audio" loop="">
-          <source src="previer.mp3" type="audio/mpeg" />
-          Your browser does not support the <code>audio</code> element.
-        </audio>
+        <header>
+            <h1>Priver.info</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="Services.txt">Services</a></li>
+                    <li><a href="about.txt">About</a></li>
+                    <li><a href="http://t.me/meowedxd">Contact</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <section id="home" class="center-content">
+                <div class="profile-container">
+                    <img src="https://i.pinimg.com/564x/35/d0/97/35d0972ef85655464083f4e60693524c.jpg" alt="Profile" class="profile-icon">
+                    <div class="typing-text">
+                        <p id="typingText"></p>
+                    </div>
+                </div>
+            </section>
+
+        </main>
+        <footer>
+            <p>&copy; 2024 Pirver.info</p>
+        </footer>
     </div>
-    <script>
-        
+
+     <audio id="backgroundAudio" autoplay loop>
+        <source src="meowbin2.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
+
+    <script src="script.js"></script>
+    <script src="snow.js"></script>
 </body>
 </html>
