--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>priver.info</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="https://i.pinimg.com/736x/22/2b/e4/222be4f4d965884eb435c330db9302f9.jpg">
 </head>
 <body>
     <div class="container">
