--- a/index.html
+++ b/index.html
@@ -2,47 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>priver.info</title>
+    <title>Profile Showcase</title>
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="https://i.pinimg.com/736x/22/2b/e4/222be4f4d965884eb435c330db9302f9.jpg">
 </head>
-<body>
+<body class="center-screen wallpaper">
     <div class="container">
-        <header>
-            <h1>Priver.info</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="Services.txt">Services</a></li>
-                    <li><a href="about.txt">About</a></li>
-                    <li><a href="http://t.me/meowedxd">Contact</a></li>
-                </ul>
-            </nav>
-        </header>
-        <main>
-            <section id="home" class="center-content">
-                <div class="profile-container">
-                    <img src="https://i.pinimg.com/564x/7a/29/f6/7a29f696ae90ed3674edf36bcd5703d6.jpg" alt="Profile" class="profile-icon">
-                    <div class="typing-text">
-                        <p id="typingText"></p>
-                    </div>
+        <div class="profiles">
+            <div class="profile-card">
+                <img src="https://images-ext-1.discordapp.net/external/U4jvxirkrF3HCiIlVQ3s_dXJxAozNNZByrujmpBjnVc/%3Fsize%3D4096/https/cdn.discordapp.com/avatars/702317884436643870/fbfeb726e9bff0d1fac132cccefba0a9.webp?format=webp" class="pfp" alt="Operator PFP"/>
+                <h2>kl</h2>
+                <p class="role">Admin @ Meowbin</p>
+                <div class="social-icons">
+                    <a href="https://doxbin.com/user/demeter" target="_blank" rel="noopener noreferrer">
+                        <img src="https://th.bing.com/th/id/R.260e9c17bd0465aaf229b988bdf4fb41?rik=6vzVWqquUV4uVA&pid=ImgRaw&r=0" alt="Doxbin" class="social-icon">
+                    </a>
+                    <a href="https://t.me/harass" target="_blank" rel="noopener noreferrer">
+                        <img src="https://static.vecteezy.com/system/resources/previews/021/672/620/original/telegram-logo-transparent-free-png.png" alt="Telegram" class="social-icon">
+                    </a>
                 </div>
-            </section>
-
-        </main>
-        <footer>
-            <p>&copy; 2024 Pirver.info</p>
-        </footer>
+            </div>
+            <div class="profile-card">
+                <img src="https://media.discordapp.net/attachments/1275554689374486579/1284461379235090462/39D2783B-E8D8-42AE-9D73-5886A30EF704.jpg?ex=66e6b760&is=66e565e0&hm=268c86275c4d82b29eb862e46883031b9031b85fa4553144ac47cd0267b1dbba&=&format=webp&width=430&height=430" class="pfp" alt="Pierce PFP"/>
+                <h2>Entact</h2>
+                <p class="role">Admin @ Meowbi</p>
+                <div class="social-icons">
+                    <a href="https://doxbin.com/user/pierce" target="_blank" rel="noopener noreferrer">
+                        <img src="https://th.bing.com/th/id/R.260e9c17bd0465aaf229b988bdf4fb41?rik=6vzVWqquUV4uVA&pid=ImgRaw&r=0" alt="Doxbin" class="social-icon">
+                    </a>
+                    <a href="https://t.me/convict" target="_blank" rel="noopener noreferrer">
+                        <img src="https://static.vecteezy.com/system/resources/previews/021/672/620/original/telegram-logo-transparent-free-png.png" alt="Telegram" class="social-icon">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="description-box">
+            <h3>Notice</h3>
+            <p>These are our only socials, beware of impersonators.</p>
+            <p>The current active domains are:</p>
+            <a href="https://doxbin.com/" target="_blank">meowbin.lol</a>
+            <p><a href="https://doxb.in/pgp.txt" target="_blank">PGP</a></p>
+        </div>
     </div>
-
-     <audio id="backgroundAudio" autoplay loop>
-        <source src="meowbin2.mp3" type="audio/mpeg">
+    <audio autoplay loop>
+        <source src="music.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
-
-    <script src="script.js"></script>
-    <script src="snow.js"></script>
 </body>
 </html>
