--- a/index.html
+++ b/index.html
@@ -3,26 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Priver.info  - Coming Soon</title>
-    <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
+    <title>Priver.info - Coming Soon</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.cdnfonts.com/css/minecraftia" rel="stylesheet">
 </head>
 <body>
-    
-    <div class="logo-container">
-        <img src="https://png.pngtree.com/png-vector/20231020/ourmid/pngtree-a-scary-girl-with-a-doll-on-the-floor-in-an-png-image_10299238.png" alt="Logo" class="logo">
-    </div>
-
-    <div class="container">
-        <h1>Priver.info  </h1>
-        <p>Site coming soon > kl</p>
-    </div>
-
-
-    <div class="bats">
-        <div class="bat" style="animation-delay: 0s;"></div>
-        <div class="bat" style="animation-delay: 2s;"></div>
-        <div class="bat" style="animation-delay: 4s;"></div>
+    <div class="content">
+        <div class="image-container">
+            <img src="girl.png" alt="Main Image" class="main-image"> 
+        </div>
+        <div class="text-container">
+            <h1 class="glowing-text">Priver.info</h1>
+            <a href="members.html" class="coming-soon-btn glowing-text">links soon</a>
+        </div>
     </div>
 </body>
 </html>
