--- a/members.html
+++ b/members.html
@@ -15,7 +15,7 @@
         <div class="text-container">
             <h1>Owners</h1>
             <ul class="owners-list">
-                <li class="glowing-text"><a href="owner1.html">kl</a></li>
+                <li class="glowing-text"><a href="kl.html">kl</a></li>
                 
 
             </ul>
