--- a/kl.html
+++ b/kl.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Members - Priver.info</title>
+    <title>kl- Priver.info</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.cdnfonts.com/css/minecraftia" rel="stylesheet">
 </head>
