--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Priver.info - Coming Soon</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.cdnfonts.com/css/minecraftia" rel="stylesheet">
+    <meta name="description" content="Priver.info Paid Bio link">
 </head>
 <body>
     <div class="content">
