--- a/index.html
+++ b/index.html
@@ -3,20 +3,131 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Priver.info - Coming Soon</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.cdnfonts.com/css/minecraftia" rel="stylesheet">
-    <meta name="description" content="Priver.info Paid Bio link">
+    <title>GlorySec</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background: url('https://upload.wikimedia.org/wikipedia/commons/thumb/a/a9/Flag_of_the_United_States_%28DoS_ECA_Color_Standard%29.svg/1920px-Flag_of_the_United_States_%28DoS_ECA_Color_Standard%29.svg.png') no-repeat center center fixed;
+            background-size: cover;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            color: black;
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        .seized-text {
+            font-size: 2em;
+            margin-bottom: 20px;
+        }
+        .logos {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 20px;
+        }
+        .logo {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+        .ticker {
+            font-size: 1.5em;
+            color: yellow;
+            display: inline-block;
+            overflow: hidden;
+            white-space: nowrap;
+            border-right: 3px solid white;
+            animation: blink-caret 0.5s step-end infinite alternate;
+        }
+        .footer {
+            position: absolute;
+            bottom: 10px;
+            font-size: 1.2em;
+            color: white;
+            display: flex;
+            align-items: center;
+        }
+        .footer img {
+            width: 24px;
+            height: 24px;
+            position: absolute;
+            left: -30px;
+        }
+        @keyframes typing {
+            from { width: 0; }
+            to { width: 100%; }
+        }
+        @keyframes blink-caret {
+            from, to { border-color: transparent; }
+            50% { border-color: white; }
+        }
+    </style>
 </head>
 <body>
-    <div class="content">
-        <div class="image-container">
-            <img src="girl.png" alt="Main Image" class="main-image"> 
-        </div>
-        <div class="text-container">
-            <h1 class="glowing-text">Priver.info</h1>
-            <a href="members.html" class="coming-soon-btn glowing-text">links soon</a>
-        </div>
+    <div class="seized-text">#GlorySec #OpTerrorism</div>
+    <div class="seized-text">This website has been seized by GlorySec</div>
+    <div class="logos">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f4/Flag_of_Anarcho-capitalism.svg/1920px-Flag_of_Anarcho-capitalism.svg.png" alt="GlorySec ANCAP Logo" class="logo">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Gadsden_flag.svg/1920px-Gadsden_flag.svg.png" alt="GlorySec Libertarian Logo" class="logo">
     </div>
+    <div class="ticker" id="ticker"></div>
+
+    <iframe id="videoFrame" width="0" height="0" src="https://www.youtube.com/embed/EKyA3x_yh9A?autoplay=1&loop=1&controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    <script>
+        const ticker = document.getElementById('ticker');
+        const messages = ['#GlorySec', '#OpTerrorism', 'You have betrayed your people...'];
+        let index = 0;
+
+        function typeMessage(message, callback) {
+            let charIndex = 0;
+            ticker.innerHTML = '';
+            ticker.style.animation = 'none';
+            
+            function typeChar() {
+                if (charIndex < message.length) {
+                    ticker.innerHTML += message[charIndex];
+                    charIndex++;
+                    setTimeout(typeChar, 100);
+                } else {
+                    ticker.style.animation = 'blink-caret 0.5s step-end infinite alternate';
+                    if (callback) setTimeout(callback, 2000);
+                }
+            }
+            
+            typeChar();
+        }
+
+        function loopMessages() {
+            typeMessage(messages[index], () => {
+                index = (index + 1) % messages.length;
+                loopMessages();
+            });
+        }
+
+        loopMessages();
+
+        const videoFrame = document.getElementById('videoFrame');
+        const videoUrls = [
+            'https://www.youtube.com/embed/EKyA3x_yh9A?autoplay=1&loop=1&controls=0',
+            'https://www.youtube.com/embed/EKyA3x_yh9A?autoplay=1&loop=1&controls=0'
+        ];
+        let videoIndex = 0;
+
+        setInterval(() => {
+            videoIndex = (videoIndex + 1) % videoUrls.length;
+            videoFrame.src = videoUrls[videoIndex];
+        }, 240600); // Change video every 60 seconds
+    </script>
+
+    <div class="footer">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/82/Telegram_logo.svg" alt="Telegram Logo">
+        t.me/GlorySec
+    </div>
+
 </body>
 </html>
