--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
     </style>
 </head>
 <body>
+     <script>alert("GlorySec");</script>
     <div class="seized-text">#GlorySec #OpTerrorism</div>
     <div class="seized-text">This website has been seized by GlorySec</div>
     <div class="logos">
